# Engineering-OS

./: .gitignore  .prettierignore  CONTRIBUTING.md  README.md  dependency-cruiser.cjs  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts  vitest.workspace.ts
.changeset/: config.json
.github/workflows/: ci.yml
agents/: README.md
apps/cli/: package.json  tsconfig.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop-backend/: package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: backend_host.rs  error.rs  main.rs  paths.rs
apps/desktop/src-tauri/src/commands/: app_info.rs  external_url.rs  mod.rs  paths.rs
docs/adr/: 0001-desktop-first-monorepo.md  0002-tauri-v2-desktop-runtime.md  0003-typescript-primary-language.md  0004-sqlite-local-storage.md  0005-lancedb-future-vector-storage.md  0006-mcp-first-integration.md  0007-plugin-first-capability-architecture.md  0008-provider-independent-ai-abstraction.md  0009-typed-desktop-backend-communication.md  0010-local-first-secrets-and-permissions.md  0011-internal-event-architecture.md  0012-testing-and-ci-quality-strategy.md  0013-desktop-platform-abstraction.md  0014-local-configuration-strategy.md  0015-application-state-strategy.md  (+8 more)
plugins/: README.md
scripts/: build-desktop-backend.mjs  prepare-node-sidecar.mjs  run-tauri-dev.mjs  workspace-aliases.ts
workflows/: README.md
(+58 files in other folders)
