[package]
name = "engineering-os-desktop"
version = "0.1.0"
description = "Engineering OS desktop shell"
authors = ["Engineering OS"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.11.5", features = [] }
webbrowser = "1.0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
