[package]
name = "engineering-os-desktop"
version = "0.1.0"
description = "Engineering OS desktop shell"
authors = ["Engineering OS"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = [] }
webbrowser = "1.0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
